# vector-edictor

./: .gitignore  README.md  demo.py  interactive_test.py  main.py  my_shapes.json  pyproject.toml  requirements.txt  run_tests.py
cli/: __init__.py  commands.py
models/: __init__.py  circle.py  line.py  oval.py  point.py  rectangle.py  shape.py  square.py
services/: __init__.py  file_manager.py  shape_manager.py
tests/: __init__.py
tests/acceptance/: __init__.py  test_user_stories.py
tests/integration/: __init__.py  test_cli_workflow.py
tests/system/: __init__.py  test_main_application.py
tests/unit/: __init__.py  test_command_processor.py  test_example.py  test_shape_manager.py  test_shapes.py
