[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vector-editor"
version = "1.0.0"
description = "A simple CLI vector editor for creating and managing geometric shapes"
authors = [{name = "Мартин", email = "niyonmartin@yandex.ru"}]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["cli", "vector", "editor", "geometry", "shapes"]

[project.scripts]
vector-editor = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["models", "services", "cli"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
